[ master ] : working init

--- a/config.yml
+++ b/config.yml
@@ -1,10 +1,11 @@
 ﻿#cloud-config
 users:
+  - default
   - name: oley
     shell: /bin/zsh
     sudo: ['ALL=(ALL) NOPASSWD:ALL']
     ssh_import_id:
-      - gh: tolejarczuk
+      - gh:tolejarczuk
 
 package_update: true
 package_upgrade: true
@@ -16,6 +17,7 @@ packages:
   - zsh
   - bat
   - jq
+  - nala
   - cowsay
   - fortune-mod
   - lolcat
@@ -52,13 +54,6 @@ write_files:
     owner: root:root
 
 runcmd:
-  - /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
-  - /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/ryanoasis/nerd-fonts/master/install.sh)"
-  - brew install bottom  # Install 'bottom' using Homebrew
-  - if [ ! -f /usr/local/share/fonts/JetBrainsMonoNerdFontMono-Regular.ttf ]; then
-        # Get latest Nerd Fonts tag
-        NF_LATEST_TAG=$(curl -s https://api.github.com/repos/ryanoasis/nerd-fonts/releases/latest | jq -r .tag_name)
-
-        # Download and extract JetBrainsMono
-        curl -L "https://github.com/ryanoasis/nerd-fonts/releases/download/${NF_LATEST_TAG}/JetBrainsMono.tar.xz" | tar -xJf - -C /usr/local/share/fonts
-      fi
+  - NF_LATEST_TAG=$(curl -s https://api.github.com/repos/ryanoasis/nerd-fonts/releases/latest | jq -r .tag_name)
+  - curl -L "https://github.com/ryanoasis/nerd-fonts/releases/download/${NF_LATEST_TAG}/JetBrainsMono.tar.xz" | tar -xJf - -C /usr/local/share/fonts
+  - reboot
