--- a/.oh-my-zshrc
+++ b/.oh-my-zshrc
@@ -175,7 +175,9 @@ mkcd() {
 }
 
 export PATH="$PATH:/usr/games"
-export PATH="$PATH:~/.local/bin"
+export PATH="$PATH:/home/oley/.local/bin"
+export LC_CTYPE=en_US.UTF-8
+export LC_ALL=en_US.UTF-8
 HISTFILE=~/.histfile
 export HISHTORY_SERVER=https://hishtory.home.dev19.eu
 
